--- a/index.html
+++ b/index.html
@@ -16,122 +16,122 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <a class="nav__logo" href="./index.html">WebStudio</a>
-            <ul class="nav__list">
-                <li class="nav__item">
-                    <a class="nav__link" href="./studio.html">Studio</a>
+            <a class="nav-logo" href="./index.html">Web <span class="span-logo">Studio</span></a>
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a class="nav-link" href="./index.html">Studio</a>
                 </li>
-                <li class="nav__item">
-                    <a class="nav__link" href="./portfolio.html">Portfolio</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="">Portfolio</a>
                 </li>
-                <li class="nav__item">
-                    <a class="nav__link" href="./contacts.html">Contacts</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="">Contacts</a>
                 </li>
             </ul>
         </nav>
 
         <address class="contact-info">
-            <ul class="contact-info__list">
-                <li class="contact-info__item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="contact-info__item"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <ul class="contact-info-list">
+                <li class="contact-info-item"><a class="contact-info-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="contact-info-item"><a class="contact-info-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
 
     <main class="main">
         <section class="hero">
-            <h1 class="hero__title">Effective Solutions for Your Business</h1>
-            <button class="hero__button" type="button">Order Service</button>
+            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+            <button class="hero-button" type="button">Order Service</button>
         </section>
 
         <section class="advantages">
             <h2 class="visually-hidden">Advantages</h2>
-            <ul class="advantages__list">
-                <li class="advantages__item">
-                    <h3 class="advantages__title">Strategy</h3>
+            <ul class="advantages-list">
+                <li class="advantages-item">
+                    <h3 class="advantages-title">Strategy</h3>
                     <p class="advantages__description">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li class="advantages__item">
-                    <h3 class="advantages__title">Punctuality</h3>
-                    <p class="advantages__description">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                <li class="advantages-item">
+                    <h3 class="advantages-title">Punctuality</h3>
+                    <p class="advantages-description">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
-                <li class="advantages__item">
-                    <h3 class="advantages__title">Diligence</h3>
-                    <p class="advantages__description">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                <li class="advantages-item">
+                    <h3 class="advantages-title">Diligence</h3>
+                    <p class="advantages-description">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
-                <li class="advantages__item">
-                    <h3 class="advantages__title">Technologies</h3>
-                    <p class="advantages__description">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                <li class="advantages-item">
+                    <h3 class="advantages-title">Technologies</h3>
+                    <p class="advantages-description">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
 
         <section class="team">
-            <h2 class="team__title">Our Team</h2>
-            <ul class="team__list">
-                <li class="team__member">
-                    <img class="team__photo" src="./images/web-img-1.jpg" alt="Portrait of Mark Guerrero, Product Designer" width="264" height="260" />
-                    <h3 class="team__name">Mark Guerrero</h3>
-                    <p class="team__role">Product Designer</p>
+            <h2 class="team-title">Our Team</h2>
+            <ul class="team-list">
+                <li class="team-member">
+                    <img class="team-photo" src="./images/web-img-1.jpg" alt="Portrait of Mark Guerrero, Product Designer" width="264" height="260" />
+                    <h3 class="team-name">Mark Guerrero</h3>
+                    <p class="team-role">Product Designer</p>
                 </li>
-                <li class="team__member">
-                    <img class="team__photo" src="./images/web-img-2.jpg" alt="Portrait of Tom Ford, Frontend Developer" width="264" height="260" />
-                    <h3 class="team__name">Tom Ford</h3>
-                    <p class="team__role">Frontend Developer</p>
+                <li class="team-member">
+                    <img class="team-photo" src="./images/web-img-2-.jpg" alt="Portrait of Tom Ford, Frontend Developer" width="264" height="260" />
+                    <h3 class="team-name">Tom Ford</h3>
+                    <p class="team-role">Frontend Developer</p>
                 </li>
-                <li class="team__member">
-                    <img class="team__photo" src="./images/web-img-3.jpg" alt="Portrait of Camila Garcia, Marketing Specialist" width="264" height="260" />
-                    <h3 class="team__name">Camila Garcia</h3>
-                    <p class="team__role">Marketing</p>
+                <li class="team-member">
+                    <img class="team-photo" src="./images/web-img-3.jpg" alt="Portrait of Camila Garcia, Marketing Specialist" width="264" height="260" />
+                    <h3 class="team-name">Camila Garcia</h3>
+                    <p class="team-role">Marketing</p>
                 </li>
-                <li class="team__member">
-                    <img class="team__photo" src="./images/web-img-4.jpg" alt="Portrait of Daniel Wilson, UI Designer" width="264" height="260" />
-                    <h3 class="team__name">Daniel Wilson</h3>
-                    <p class="team__role">UI Designer</p>
+                <li class="team-member">
+                    <img class="team-photo" src="./images/web-img-4.jpg" alt="Portrait of Daniel Wilson, UI Designer" width="264" height="260" />
+                    <h3 class="team-name">Daniel Wilson</h3>
+                    <p class="team-role">UI Designer</p>
                 </li>
             </ul>
         </section>
 
         <section class="portfolio">
-            <h2 class="portfolio__title">Our Portfolio</h2>
-            <ul class="portfolio__list">
-                <li class="portfolio__item">
-                    <img class="portfolio__image" src="./images/img-portfolio-1.jpg" alt="Screenshot of the Banking App" width="360" height="300" />
-                    <h3 class="portfolio__name">Banking App</h3>
-                    <p class="portfolio__category">App</p>
+            <h2 class="portfolio-title">Our Portfolio</h2>
+            <ul class="portfolio-list">
+                <li class="portfolio-item">
+                    <img class="portfolio-image" src="./images/img-portfolio-1.jpg" alt="Screenshot of the Banking App" width="360" height="300" />
+                    <h3 class="portfolio-name">Banking App</h3>
+                    <p class="portfolio-category">App</p>
                 </li>
-                <li class="portfolio__item">
-                    <img class="portfolio__image" src="./images/img-portfolio-2.jpg" alt="Marketing campaign for Cashless Payment" width="360" height="300" />
-                    <h3 class="portfolio__name">Cashless Payment</h3>
-                    <p class="portfolio__category">Marketing</p>
+                <li class="portfolio-item">
+                    <img class="portfolio-image" src="./images/img-portfolio-2.jpg" alt="Marketing campaign for Cashless Payment" width="360" height="300" />
+                    <h3 class="portfolio-name">Cashless Payment</h3>
+                    <p class="portfolio-category">Marketing</p>
                 </li>
-                <li class="portfolio__item">
-                    <img class="portfolio__image" src="./images/img-portfolio-3.jpg" alt="Screenshot of the Meditation App" width="360" height="300" />
-                    <h3 class="portfolio__name">Meditation App</h3>
-                    <p class="portfolio__category">App</p>
+                <li class="portfolio-item">
+                    <img class="portfolio-image" src="./images/img-portfolio-3.jpg" alt="Screenshot of the Meditation App" width="360" height="300" />
+                    <h3 class="portfolio-name">Meditation App</h3>
+                    <p class="portfolio-category">App</p>
                 </li>
-                <li class="portfolio__item">
-                    <img class="portfolio__image" src="./images/img-portfolio-4.jpg" alt="Marketing strategy for Taxi Service" width="360" height="300" />
-                    <h3 class="portfolio__name">Taxi Service</h3>
-                    <p class="portfolio__category">Marketing</p>
+                <li class="portfolio-item">
+                    <img class="portfolio-image" src="./images/img-portfolio-4.jpg" alt="Marketing strategy for Taxi Service" width="360" height="300" />
+                    <h3 class="portfolio-name">Taxi Service</h3>
+                    <p class="portfolio-category">Marketing</p>
                 </li>
-                <li class="portfolio__item">
-                    <img class="portfolio__image" src="./images/img-portfolio-5.jpg" alt="Design of Screen Illustrations" width="360" height="300" />
-                    <h3 class="portfolio__name">Screen Illustrations</h3>
-                    <p class="portfolio__category">Design</p>
+                <li class="portfolio-item">
+                    <img class="portfolio-image" src="./images/img-portfolio-5.jpg" alt="Design of Screen Illustrations" width="360" height="300" />
+                    <h3 class="portfolio-name">Screen Illustrations</h3>
+                    <p class="portfolio-category">Design</p>
                 </li>
-                <li class="portfolio__item">
-                    <img class="portfolio__image" src="./images/img-portfolio-6.jpg" alt="Marketing strategy for Online Courses" width="360" height="300" />
-                    <h3 class="portfolio__name">Online Courses</h3>
-                    <p class="portfolio__category">Marketing</p>
+                <li class="portfolio-item">
+                    <img class="portfolio-image" src="./images/img-portfolio-6.jpg" alt="Marketing strategy for Online Courses" width="360" height="300" />
+                    <h3 class="portfolio-name">Online Courses</h3>
+                    <p class="portfolio-category">Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
 
     <footer class="footer">
-        <a class="footer__logo" href="./index.html">WebStudio</a>
-        <p class="footer__text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <a class="footer-portfolio-logo" href="./index.html">Web <span class="footer-span-logo">Studio</span></a>
+        <p class="footer-portfolio-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 
