--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <ul class="advantages-list">
                 <li class="advantages-item">
                     <h3 class="advantages-title">Strategy</h3>
-                    <p class="advantages__description">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                    <p class="advantages-description">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li class="advantages-item">
                     <h3 class="advantages-title">Punctuality</h3>
